# foliantcontrib.init

./: .gitignore  README.md  changelog.md  pyproject.toml  setup.py
foliant/cli/init/: __init__.py
foliant/cli/init/templates/basic/: README.md  docker-compose.yml  foliant.yml
